<resources>
    <string name="app_name">PracticeApp</string>
    <string name="title_home">Shop</string>
    <string name="title_dashboard">Cart</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="product_image">Product Image</string>
    <string name="product_name">Bread</string>
    <string name="product_price">35</string>
    <string name="vendor_name">Ram Super Market</string>
    <string name="vendor_address">Krishna Nagar</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="delete_from_cart">Remove Item</string>
    <string name="call_vendor">Call Vendor</string>
    <string name="total">Total: </string>
    <string name="simple_activity_transition">Transition</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
